--- a/views/form.pug
+++ b/views/form.pug
@@ -10,8 +10,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>Hello, world!</title>
+  <style>.he{margin-top:30vh;}</style>
 </head>
-
+<div class="bg-image"></div>
+<div class="bg-text">
+<div class="he">
 <body style="background-color: rgb(196, 227, 255);">
   <h1>Welcome To Petzone: Register with us to explore our features :) :) :) </h1>
   <form class="row g-3" action="/contact" method="POST">
@@ -51,7 +54,9 @@
       <button type="submit" class="btn btn-primary">Sign in</button>
     </div>
   </form>
-  <a href="/login">login</a>
+  </div>
+  </div>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"crossorigin="anonymous"></script>
